--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <title>Portfolio</title>
 </head>
 
 <body>
-    <h1>My Future Portfolio Site!</h1>
-    <!-- www.123contactform.com script begins here -->
-    <script type="text/javascript">
-        var servicedomain = "www.123contactform.com";
-        var frmRef = '';
-        try {
-            frmRef = window.top.location.href;
-        }
-        catch (err) {}
-        var cfJsHost = (("https:" == document.location.protocol) ? "https://" : "http://");
-        document.write(unescape("%3Cscript src='" + cfJsHost + servicedomain + "/includes/easyXDM.min.js' type='text/javascript'%3E%3C/script%3E"));
-        frmRef = encodeURIComponent(frmRef.replace(/(<([^>]+)>)/ig, '')).replace('%26', '[%ANDCHAR%]');
-        document.write(unescape("%3Cscript src='" + cfJsHost + servicedomain + "/jsform-2185796.js?ref=" + frmRef + "' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-
-    <p>Powered by <a class="footerLink13" title="123ContactForm" href="http://www.123contactform.com">123ContactForm</a> | <a style="font-size:small!important;color:#000000!important; text-decoration:underline!important;" title="Looks like phishing? Report it!"
-            href="http://www.123contactform.com/sfnew.php?s=123contactform-52&control119314=http:///contact-form--2185796.html&control190=Report%20abuse" rel="nofollow">Report abuse</a></p>
-    <!-- www.123contactform.com script ends here -->
-
+    <div class="page">
+        <h1>My Future Portfolio Site!</h1>
+        <!-- www.123contactform.com script begins here -->
+        <script type="text/javascript">
+            var servicedomain = "www.123contactform.com";
+            var frmRef = '';
+            try {
+                frmRef = window.top.location.href;
+            }
+            catch (err) {}
+            var cfJsHost = (("https:" == document.location.protocol) ? "https://" : "http://");
+            document.write(unescape("%3Cscript src='" + cfJsHost + servicedomain + "/includes/easyXDM.min.js' type='text/javascript'%3E%3C/script%3E"));
+            frmRef = encodeURIComponent(frmRef.replace(/(<([^>]+)>)/ig, '')).replace('%26', '[%ANDCHAR%]');
+            document.write(unescape("%3Cscript src='" + cfJsHost + servicedomain + "/jsform-2185796.js?ref=" + frmRef + "' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <!-- www.123contactform.com script ends here -->
+    </div>
 </body>
 
 </html>
