--- a/index.html
+++ b/index.html
@@ -4,27 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Font -->
+    <link href='//fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <title>Portfolio</title>
 </head>
 
 <body>
     <div class="page">
-        <h1>My Future Portfolio Site!</h1>
-        <!-- www.123contactform.com script begins here -->
-        <script type="text/javascript">
-            var servicedomain = "www.123contactform.com";
-            var frmRef = '';
-            try {
-                frmRef = window.top.location.href;
-            }
-            catch (err) {}
-            var cfJsHost = (("https:" == document.location.protocol) ? "https://" : "http://");
-            document.write(unescape("%3Cscript src='" + cfJsHost + servicedomain + "/includes/easyXDM.min.js' type='text/javascript'%3E%3C/script%3E"));
-            frmRef = encodeURIComponent(frmRef.replace(/(<([^>]+)>)/ig, '')).replace('%26', '[%ANDCHAR%]');
-            document.write(unescape("%3Cscript src='" + cfJsHost + servicedomain + "/jsform-2185796.js?ref=" + frmRef + "' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <!-- www.123contactform.com script ends here -->
+        <section class="newsletter">
+            <h3>Join Our Newsletter</h3>
+            <p>Stay updated sign pup for our newsletter and you'll be one of the first to know about the new App</p>
+            <!--Newsletter SigUp Form-->
+            <script type="text/javascript" src="https://form.jotform.com/jsform/62556326927161"></script>
+        </section>
     </div>
 </body>
 
