--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
     <div class="page">
+        <header class="coming-soon">
+            <h2>Coming Soon</h2>
+        </header>
         <section class="newsletter">
             <h3>Join Our Newsletter</h3>
             <p>Stay updated sign pup for our newsletter and you'll be one of the first to know about the new App</p>
