--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <section class="newsletter">
             <h3>Join Our Newsletter</h3>
-            <p>Stay updated sign pup for our newsletter and you'll be one of the first to know about the new App</p>
+            <p>Stay updated sign up for our newsletter and you'll be one of the first to know when this website is ready</p>
             <!--Newsletter SigUp Form-->
             <script type="text/javascript" src="https://form.jotform.com/jsform/62556326927161"></script>
         </section>
